--- a/style.css
+++ b/style.css
@@ -1,44 +1,4 @@
-@font-face {
-  font-family: SourceCodePro;
-  src: url(fonts/SourceCodePro/Regular.ttf);
-}
-
-@font-face {
-  font-family: SourceCodeProItalic;
-  src: url(fonts/SourceCodePro/Italic.ttf);
-}
-
-@font-face {
-  font-family: SourceCodeProBold;
-  src: url(fonts/SourceCodePro/Bold.ttf);
-}
-
-@font-face {
-  font-family: SourceCodeProBoldItalic;
-  src: url(fonts/SourceCodePro/BoldItalic.ttf);
-}
-
-@font-face {
-  font-family: Pacifico;
-  src: url(fonts/Pacifico.ttf);
-}
-
-i {
-  font-family: SourceCodeProItalic;
-}
-
-b {
-  font-family: SourceCodeProBold;
-}
-
-b i,
-i b {
-  font-family: SourceCodeProBoldItalic;
-}
-
-handwriting {
-  font-family: Pacifico;
-}
+@import url(fonts/style.css);
 
 version {
   position: fixed;
@@ -51,9 +11,6 @@ body {
   font-size: 1.2vw;
   text-shadow: 0 0 5px #fff;
   background-size: cover;
-  background-color: rgb(0, 0, 5);
-  font-family: SourceCodePro;
-  color: #fff;
 }
 
 header {
@@ -77,7 +34,7 @@ header {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: rgb(0, 0, 10);
+  background-color: #111;
   -webkit-text-stroke: #000 1px;
   cursor: pointer;
   text-align: center;
