--- a/fonts/style.css
+++ b/fonts/style.css
@@ -23,6 +23,13 @@
   src: url(Pacifico.ttf);
 }
 
+@font-face {
+  font-family: MaterialSymbolsOutlined;
+  font-style: normal;
+  font-weight: 400;
+  src: url(icons.woff2) format('woff2');
+}
+
 i {
   font-family: SourceCodeProItalic;
 }
@@ -46,6 +53,28 @@ body {
   color: #fff;
 }
 
+.icons {
+  font-family: 'Material Symbols Outlined';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+
 a {
   color: #00f;
   transition: color 0.1s;
@@ -54,4 +83,12 @@ a {
 
 a:hover {
   color: #f0f;
+}
+
+button {
+  font-family: SourceCodePro;
+  border-radius: 0.5vw;
+  color: #fff;
+  background-color: #111;
+  cursor: pointer;
 }
